Include no attempt to retry after error, just log

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -25,3 +25,4 @@ pt-BR:
   chamado_inserted: "ChamadosInseridos"
   chamado_n_updated: "QtdChamadosAtualizados"
   chamado_updated: "ChamadosAtualizados"
+  chamado_message: "Mensagem de Erro"
